# Tasks

./: .gitignore  README  README.md  VideoGPSRecorder.py  VideoGPSRecorder1.py
cpp/: CMakeLists.txt  README.md
cpp/OpenJudge/: 216_Balanced_Game.cpp  217_Train_Station.cpp  Makefile  OpenJudge  railway.in
cpp/basic/: CMakeLists.txt
cpp/basic/Chap1_basicDataStructure/: CMakeLists.txt  report.md
cpp/basic/Chap1_basicDataStructure/1_sequenceList/: 1_sequenceList  1_sequenceList.pro  CMakeLists.txt  main.cpp  report.md  seqlist  seqlist.h  seqlist.hpp
cpp/basic/Chap1_basicDataStructure/2_linkList/: CMakeLists.txt  linkList.h  main.cpp  report.md
cpp/basic/Chap1_basicDataStructure/3_doubleList/: CMakeLists.txt  doubleList.h
cpp/basic/Chap1_basicDataStructure/4_stack/: CMakeLists.txt  main.cpp  stack.h
cpp/basic/Chap2_treeStructure/: CMakeLists.txt
cpp/basic/Chap2_treeStructure/1_binaryTree/: 1_binaryTree.pro  BinaryTree.hpp  main.cpp  (+2 more)
cpp/basic/Chap3_graphStructure/: CMakeLists.txt
cpp/basic/Chap5_sort/: CMakeLists.txt
cpp/basic/Chap7_algorithm/: CMakeLists.txt
cpp/basic/Chap8_dynamicProgramming/: CMakeLists.txt  a.out  dynamicProgramming.h  prob1.cpp  prob2.cpp  prob3.cpp  prob4.cpp  prob5.cpp  prob6.cpp  report.md  test2
cpp/basic/Chap9_greedyAlgorithm/: CMakeLists.txt  MST(unfinished).hpp  prob1.cpp
cpp/basic/Other/: CMakeLists.txt  permutation.cpp
cpp/basic_opencv/HighGUI/: DrawRectangle.cpp
cpp/cmake/: FindEigen3.cmake  FindOpenCV.cmake
cpp/libs/: utils.cpp
cpp/opencv/basic-image-process/: CMakeLists.txt  binaryzation.cpp  blur.cpp
cpp/opencv/core/: CMakeLists.txt  contrastandbright.cpp  split.cpp
cpp/opencv/high-gui/: CMakeLists.txt  DrawRectangle.cpp  Trackbar.cpp
cpp/opencv/imgproc/: CMakeLists.txt  ImgVideoMatch.cpp  binaryzation.cpp  blur.cpp  btmatch.cpp  canny.cpp  contours.cpp  cornerHarris.cpp  equalizeHist.cpp  erode.cpp  houghcircles.cpp  houghlinesP.cpp  imgcat.cpp  inpaint.cpp  knnmatch.cpp  mat.cpp  motionDetection.cpp  orb.cpp  surf.cpp  warpaffine.cpp
(+137 files in other folders)
